# TestCode

./: .gitignore  README.md
.vim/: coc-settings.json
algorithm/: UTCLocalTime.cpp  week_of_year.cpp
assembly/: register.cpp  stack_point.cpp
c/: core.main.32997  format_test.c  inline_test.c  inline_test.h  inline_test.i  strlen.c
cmake/step1-exercise3/: CMakeLists.txt  tutorial.cxx
git_test/: README.md  test.txt
go/: deep_copy.go  defer_in_loop.go  deffer_code.go  fmt_print.go  func_name.go  func_param.go  get_slice.go  go.mod  hello.go  interface.go  json_parse.go  json_string_ary.go  json_type.go  map_order.go  map_tt.go  nil_map.go  panic_and_deffer.go  pointer_gc.go  print_ary.go  random.go  suspend.go  test_constant.go  test_empty_map.go  time_day.go  time_local.go  type_assert.go
leetcode/: 1038_convert_bst_to_greater_tree.cpp  1423_max_score.cpp  160_cross_node.cpp  190_reverseBits.cpp  191_hammingWeight.cpp  206_reverseList.cpp  2817_min_absolute.cpp  83_DeleteDuplicates.cpp  88_merge_array.cpp  94_tree.cpp  IsPalindrome.cpp  RegularExp.cpp  quick_sort.cpp
linux/: lock_file1.cpp  lock_file2.cpp  run_shell.cpp  signal.cpp  test_server.cpp
lua/: function_return_order.lua  number_and_integer.lua  set_table_in_function.lua  string_to_hex.lua  table_index_is_nil.lua  table_insert.lua  table_rank.lua  test_type.lua
net/: tcp_client.cpp  tcp_server.cpp
python/: .gitignore  app_setting.py  arg_argparse.py  arg_getopt.py  arg_sys.py  dict_class_sort.py  dict_ref.py  fcc.json  func_param.py  globals_test.py  im_feature.py  plot.py  register_key.py  (+6 more)
(+100 files in other folders)
